--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/Calc"
+        android:id="@+id/tvCalc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Calc" />
+        app:layout_constraintTop_toBottomOf="@id/tvCalc" />
 
     <GridLayout
         android:layout_width="match_parent"
